--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,9 @@ deps =
     -e .
 commands:
     !all-!translate-!live-!en-!fr : build_md_translations {posargs} en
-    translate : md2po --input docs{/}en --output {[docs]templates_dir} --pot --duplicates=merge
+    translate : build_pot_translations
     translate : build_po_translations fr
-    live : live_serve_en {posargs}
+    live : live_serve {posargs}
     all : build_md_translations {posargs} en fr
     en : build_md_translations {posargs} en
     fr : build_md_translations {posargs} fr
