--- a/docs/mkdocs.en.yml
+++ b/docs/mkdocs.en.yml
@@ -1,6 +1,6 @@
 INHERIT: config.yml
 site_name: MkDocs PO I18n
-site_url: https://kattni.com
+site_url: https://mkdocs-po-i18n.readthedocs.io/en/latest/
 docs_dir: en
 
 theme:
